language update  refs #3430

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -209,6 +209,7 @@
         "LastDays": "Posledních %s dní (včetně dneška)",
         "LastDaysShort": "Posledních %s dní",
         "LayoutDirection": "ltr",
+        "LearnMore": "%1$sdozvědět se více%2$s",
         "Live": "Živě",
         "Loading": "Načítám...",
         "LoadingData": "Načítám data...",
@@ -355,6 +356,7 @@
         "Seconds": "%s sekund",
         "SeeAll": "Zobrazit vše",
         "SeeTheOfficialDocumentationForMoreInformation": "Pro více informací navštivte %soficiální dokumentaci%s.",
+        "SeeThisFaq": "Podívejte se na %1$stento často kladený dotaz%2$s.",
         "Segment": "Část",
         "SelectYesIfYouWantToSendEmailsViaServer": "Zvolte \"Ano\" pokud chcete e-mail posílat pomocí uvedeného serveru místo lokální funkce PHP mail",
         "Settings": "Nastavení",
@@ -433,6 +435,7 @@
         "WarningFileIntegrityNoMd5file": "Test integrity nemůže být dokončen z důvodů chybějící funkce md5_file().",
         "WarningPasswordStored": "%sUpozornění:%s Toto heslo bude uloženo v konfiguračním souboru viditelné pro všechny s přístupem k němu.",
         "WarningPhpVersionXIsTooOld": "PHP verze %s, kterou používáte již není podporována (EOL). Důrazně doporučujeme aktualizovat na novější verzi, protože stávající může obsahovat bezpečnostní a další problémy, které byly opraveny v novějších verzích PHP.",
+        "WarningPiwikWillStopSupportingPHPVersion": "Piwik tuto verzi PHP přestane podporovat za %s. Aktualizujte, dokud je čas!",
         "Website": "Web stránky",
         "Weekly": "Týdně",
         "WeeklyReport": "Týdně",
