--- a/lang/nl.json
+++ b/lang/nl.json
@@ -491,6 +491,7 @@
         "NoVisitorsShort": "Geen Bezoekers",
         "NoWebsiteFound": "Geen website gevonden",
         "NoWebsitesShort": "Geen Websites",
+        "PossibleSslError": "Mogelijke SSL certificaat fout",
         "PullDownToRefresh": "Trek om te vernieuwen ...",
         "RatingDontRemindMe": "Herrinner me er niet aan",
         "RatingNotNow": "Niet nu",
