--- a/plugins/DevicesDetection/lang/it.json
+++ b/plugins/DevicesDetection/lang/it.json
@@ -1,6 +1,8 @@
 {
     "DevicesDetection": {
+        "BrowserEngine": "Motore browser",
         "BrowserEngineDocumentation": "Questo grafico mostra i browser dei vostri visitatori suddivisi in famiglie di browser. %s Le informazioni più importanti per gli sviluppatori web sono che tipo di motore di rendering i loro visitatori stanno usando. Le etichette contengono i nomi dei motori seguiti dal browser più comune che utilizza quel motore tra parentesi.",
+        "BrowserEngines": "Motori browser",
         "BrowserVersions": "Versioni browser",
         "Camera": "Fotocamera",
         "CarBrowser": "Browser in auto",
