--- a/plugins/Goals/lang/fr.json
+++ b/plugins/Goals/lang/fr.json
@@ -6,11 +6,12 @@
         "AddNewGoalOrEditExistingGoal": "%sAjouter un nouvel objectif%s or %sEditer%s des objectifs existants",
         "AllowGoalConvertedMoreThanOncePerVisit": "Autoriser un objectif à être converti plus d'une fois par visite.",
         "AllowMultipleConversionsPerVisit": "Autoriser les conversions multiples par visite",
-        "BestCountries": "Vos meilleurs pays de conversion sont:",
-        "BestKeywords": "Vos meilleurs mots clefs sont:",
-        "BestReferrers": "Vos meilleurs sites web de conversion sont:",
+        "BestCountries": "Vos meilleurs pays de conversion sont :",
+        "BestKeywords": "Vos meilleurs mots-clés sont :",
+        "BestReferrers": "Vos meilleurs sites web de conversion sont :",
         "CaseSensitive": "Correspondance sensible à la case",
-        "ClickOutlink": "Cliquent sur un Lien vers un site externe",
+        "ChooseGoal": "Choisir un objectif",
+        "ClickOutlink": "Cliquent sur un lien vers un site externe",
         "ColumnAverageOrderRevenueDocumentation": "Les recettes moyennes par commande représentent les recettes totales des commandes E-commerce divisées par le nombre de commandes.",
         "ColumnAveragePriceDocumentation": "Revenu moyen pour %s.",
         "ColumnAverageQuantityDocumentation": "Quantité moyenne vendue de %s dans les commandes E-commerce.",
@@ -34,7 +35,7 @@
         "CreateNewGOal": "Créer un nouvel Objectif",
         "DaysToConv": "Jours par conversion",
         "DefaultGoalConvertedOncePerVisit": "(par défaut) Un objectif peut-être converti une seule fois par visite",
-        "DefaultRevenue": "Le revenue par défaut de l'objectif est",
+        "DefaultRevenue": "Le revenu par défaut de l'objectif est",
         "DefaultRevenueHelp": "Par exemple, un formulaire de contact soumis par un visiteur peut avoir une valeur de 10 € en moyenne. Piwik vous aidera à comprendre comment se comportent vos visiteurs.",
         "DeleteGoalConfirm": "Êtes vous sûr de vouloir supprimer l'objectif %s?",
         "DocumentationRevenueGeneratedByProductSales": "Ventes de produits. Hors taxes, expéditions et remises.",
@@ -66,24 +67,24 @@
         "Manually": "manuellement",
         "ManuallyTriggeredUsingJavascriptFunction": "Les objectifs sont déclenchés manuellement en utilisant l'API Javascript trackGoal()",
         "MatchesExpression": "correspond à l'expression %s",
-        "NewGoalDescription": "Un Objectif dans Piwik représente votre stratégie, votre priorité, et peut comporter plusieurs choses: \"les broches téléchargées\", \"Enregistré à la newsletter\", \"Page services.html visitée\", etc.",
+        "NewGoalDescription": "Dans Piwik, un objectif représente votre stratégie, votre priorité, et peut comporter plusieurs choses: \"Télécharger la brochure\", \"S'enregistrer à la newsletter\", \"Visiter la page services.html\", etc.",
         "NewGoalIntro": "Le suivi de la conversion des objectifs et une des manières les plus efficaces de mesurer et améliorer vos objectifs d'affaires.",
-        "NewGoalYouWillBeAbleTo": "Vous serez en capacité de visualiser et d'analyser votre performance, pour chaque Objectif, et d'apprendre comment augmenter vos conversions, taux de conversion et revenu par visite.",
+        "NewGoalYouWillBeAbleTo": "Vous serez en capacité de visualiser et d'analyser vos performances pour chaque objectif, et d'apprendre comment augmenter vos conversions, taux de conversion et revenu par visite.",
         "NewVisitorsConversionRateIs": "Le taux de conversion des nouveaux visiteurs est %s",
-        "NewWhatDoYouWantUsersToDo": "Que voulez vous que vos visiteurs accomplissent sur votre site web?",
+        "NewWhatDoYouWantUsersToDo": "Que voulez-vous que vos visiteurs accomplissent sur votre site web ?",
         "NoGoalsNeedAccess": "Uniquement un Administrateur ou un utilisateur avec un accès Super Utilisateur peut ajouter des Objectifs à un site donné. Veuillez demander à votre administrateur Piwik de mettre en place un Objectif pour votre site web. <br \/>Le suivit d'Objectifs est une bonne manière de mieux comprendre et de maximiser les performances de votre site web!",
         "Optional": "(optionnel)",
         "OverallConversionRate": "%s taux de conversion global (visites avec un objectif rempli)",
         "OverallRevenue": "%s revenu global",
         "PageTitle": "Titre de la page",
         "Pattern": "Modèle",
-        "PluginDescription": "Créer des objectifs et consulter les rapports sur vos conversions d'objectifs: évolution au cours du temps, revenu par visite, conversion par référant, par mot clef, etc.",
+        "PluginDescription": "Créer des objectifs et consulter les rapports sur vos conversions d'objectifs : évolution au cours du temps, revenu par visite, conversion par référent, par mot-clé, etc.",
         "ProductCategory": "Catégorie du produit",
         "ProductName": "Nom du produit",
         "Products": "Produits",
         "ProductSKU": "Code Produit",
         "ReturningVisitorsConversionRateIs": "Le taux de conversion des visiteurs déjà venus est %s",
-        "SendEvent": "Envoyer un évènement",
+        "SendEvent": "Envoient un évènement",
         "SingleGoalOverviewDocumentation": "Ceci est un aperçu des conversions pour un seul Objectif. %s les lignes de tendance sous le graphique peuvent être agrandies en cliquant dessus.",
         "UpdateGoal": "Mettre à jour un objectif",
         "URL": "URL",
