--- a/plugins/Installation/lang/fr.json
+++ b/plugins/Installation/lang/fr.json
@@ -4,7 +4,7 @@
         "CannotConnectToDbResolvingExplanation": "Cela peut être un problème temporaire, essayer de %1$srafraichir la page%2$s. Si le problème persiste veuillez contacter votre administrateur Piwik.",
         "CollaborativeProject": "Piwik est un projet collaboratif, construit avec amour par des personnes du monde entier.",
         "ConfigurationHelp": "Votre configuration de Piwik semble être erronée. Vous pouvez ou bien supprimer config\/config.inc.php et reprendre l'installation ou corriger les paramètres de connexion.",
-        "ConfirmDeleteExistingTables": "Êtes vous sûr de vouloir supprimer les tables : %s de votre base de données? ATTENTION: LES DONNÉES SERONT DÉFINITIVEMENT PERDUES!",
+        "ConfirmDeleteExistingTables": "Êtes vous sûr de vouloir supprimer les tables %s de votre base de données ? ATTENTION : LES DONNÉES SERONT DÉFINITIVEMENT PERDUES !",
         "Congratulations": "Félicitations",
         "CongratulationsHelp": "<p>Félicitations! Votre installation de Piwik est terminée.<\/p><p>Assurez-vous que le code JavaScript est présent sur toutes vos pages et attendez vos premiers visiteurs!<\/p>",
         "DatabaseAbilities": "Capacités de la base de données",
@@ -17,6 +17,8 @@
         "DatabaseSetupLogin": "compte",
         "DatabaseSetupServer": "serveur de la base de données",
         "DatabaseSetupTablePrefix": "préfixe des tables",
+        "DefaultSettings": "Paramétrage par défaut",
+        "DefaultSettingsHelp": "Piwik est installé avec un paramétrage par défaut. Vous pouvez personnaliser ces réglages maintenant ou le faire plus tard dans l'espace d'administration.",
         "Email": "courriel",
         "Extension": "extension",
         "Filesystem": "Système de fichiers",
@@ -28,7 +30,7 @@
         "InsufficientPrivilegesHelp": "Vous pouvez donner ces droits en utilisant un outils tel que phpMyAdmin ou en exécutant les requêtes SQL appropriées. Si vous ne savez pas comment effectuer cela veuillez demander à votre administrateur système de donner ces droits pour vous.",
         "InsufficientPrivilegesMain": "La base de données n'existe pas (et n'a pas pu être créée), ou l'utilisateur spécifié a des privilèges insuffisants. Les utilisateurs de la base de données doivent avoir les privilèges suivants : %s",
         "JsTagArchivingHelp1": "Pour les sites à moyen et fort trafic il existe des optimisations qui pourraient être mises en place pour aider Piwik à s'exécuter plus rapidement (comme %1$smettre en place l'auto-archivage%2$s).",
-        "JSTracking_EndNote": "Note: après le processus d'installation, vous pouvez générer un code de suivi personnalisé depuis la section d'administration \"%1$sCode de Suivi%2$s.",
+        "JSTracking_EndNote": "Note : après le processus d'installation, vous pouvez générer un code de suivi personnalisé depuis la section d'administration \"%1$sCode de Suivi%2$s.",
         "JSTracking_Intro": "Pour effectuer le suivi du trafic web avec Piwik vous devez vous assurer que du code supplémentaire est ajouté sur toutes vos pages.",
         "LargePiwikInstances": "Aide pour les instances de Piwik volumineuses",
         "Legend": "Légendes",
@@ -64,7 +66,7 @@
         "SuperUserSetupError": "Erreur lors de l'ajout du super utilisateur.",
         "SuperUserSetupSuccess": "Super Utilisateur créé avec succès!",
         "SystemCheck": "Vérification du système",
-        "SystemCheckAutoUpdateHelp": "Note: La mise à jour de Piwik en un clic requiert une permission en écriture sur le dossier de Piwik et son contenu.",
+        "SystemCheckAutoUpdateHelp": "Note : La mise à jour de Piwik en un clic requiert une permission en écriture sur le dossier de Piwik et son contenu.",
         "SystemCheckCreateFunctionHelp": "Piwik utilise des fonctions anonymes pour les callbacks.",
         "SystemCheckCronArchiveProcess": "Tâche Cron d'archivage",
         "SystemCheckCronArchiveProcessCLI": "Gestion des processus via ligne de commande",
@@ -96,7 +98,7 @@
         "SystemCheckPdoAndMysqliHelp": "Sur un serveur linux vous pouvez compiler PHP avec les options suivantes : %1$s Dans votre php.ini, ajoutez les lignes suivantes: %2$s",
         "SystemCheckPhp": "Version PHP",
         "SystemCheckPhpPdoAndMysqli": "Plus d'informations sur: %1$sPHP PDO%2$s et %3$sMYSQLI%4$s.",
-        "SystemCheckSessionAutostart": "Pour éviter certains problèmes veuillez définir le paramètre suivant dans votre fichier php.ini: session.auto_start=0",
+        "SystemCheckSessionAutostart": "Pour éviter certains problèmes veuillez définir le paramètre suivant dans votre fichier php.ini : session.auto_start=0",
         "SystemCheckSplHelp": "Vous devez configurer et recompiler PHP avec la librairie standard (par défaut).",
         "SystemCheckSummaryNoProblems": "Génial! Il n'y a aucun problème avec votre installation de Piwik. Donnez vous une tape dans le dos.",
         "SystemCheckSummaryThereWereErrors": "Oh-oh! Piwik a détecté des %1$sproblèmes critiques%2$s avec votre installation de Piwik. %3$sCes problèmes critiques doivent être fixés immédiatement.%4$s",
