--- a/plugins/Live/lang/fr.json
+++ b/plugins/Live/lang/fr.json
@@ -4,12 +4,12 @@
         "AveragePageGenerationTime": "Chaque page a pris une moyenne de %1$s à charger pour ce visiteur.",
         "CalculatedOverNPageViews": "Calculé sur la base des %1$s dernières pages vues par ce visiteur.",
         "ClickToViewMoreAboutVisit": "Cliquez pour afficher plus d'informations à propos de cette visite",
-        "ConvertedNGoals": "Conversion de %s Objectifs",
+        "ConvertedNGoals": "Conversion de %s objectifs",
         "EcommerceSummaryConversions": "%1$s%2$s commandes sur un total de %3$s%4$s, comptaient %5$s articles.",
         "FirstVisit": "Première visite",
         "GoalType": "Type",
         "HideMap": "Cacher la carte",
-        "KeywordRankedOnSearchResultForThisVisitor": "Le mot clef %1$s a été a été noté %2$s dans la page de résultats de recherche %3$s pour ce visiteur",
+        "KeywordRankedOnSearchResultForThisVisitor": "Le mot-clé %1$s a été a été noté %2$s dans la page de résultats de recherche %3$s pour ce visiteur",
         "LastHours": "Dernières %s heures",
         "LastMinutes": "Dernières %s minutes",
         "LastVisit": "Dernière visite",
@@ -24,7 +24,7 @@
         "PluginDescription": "Espionnez vos visiteurs, en temps réel!",
         "PreviousVisitor": "Visiteur précédent",
         "RealTimeVisitorCount": "Décompte des visiteurs en temps réel",
-        "Referrer_URL": "URL du référant",
+        "Referrer_URL": "URL du référent",
         "ShowMap": "Montrer la carte",
         "SimpleRealTimeWidget_Message": "%s et %s dans le(s)\/la dernier(s)\/ière(s) %s.",
         "ViewVisitorProfile": "Afficher le profil du visiteur",
