--- a/plugins/UserCountry/lang/fr.json
+++ b/plugins/UserCountry/lang/fr.json
@@ -314,7 +314,7 @@
         "GeoIpLocationProviderDesc_Php2": "Si votre site web a beaucoup de trafic, vous pourriez trouver que ce fournisseur de localisation est trop lent. Dans ce cas, vous devriez installer %1$sl'extension PECL%2$s ou un %3$smodule serveur%4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Ce fournisseur de localisation utilise le module GeoIP qui a été installé sur votre serveur HTTP. Ce fournisseur est rapide et précis, mais peut être %1$suniquement utilisé avec le suivi de navigateur classique.%2$s",
         "GeoIpLocationProviderDesc_ServerBased2": "Si vous devez importer des fichiers de logs ou bien autre chose qui requiert de définir des adresses IP, utilisez %1$sl'implémentation PECL GeoIP(recommandé)%2$s ou %3$sl'implémentation GeoIP PHP%4$s.",
-        "GeoIpLocationProviderDesc_ServerBasedAnonWarn": "Note: L'anonymisation de l'adresse IP n'a aucun effet sur les localisations communiquées par ce fournisseur. Avant de l'utiliser avec l'anonymisation d'IP, assurez vous que cela ne transgresse aucune loi sur la vie privées à laquelle vous pourriez être assujetti.",
+        "GeoIpLocationProviderDesc_ServerBasedAnonWarn": "Note : L'anonymisation de l'adresse IP n'a aucun effet sur les localisations communiquées par ce fournisseur. Avant de l'utiliser avec l'anonymisation d'IP, assurez vous que cela ne transgresse aucune loi sur la vie privées à laquelle vous pourriez être assujetti.",
         "GeoIpLocationProviderNotRecomnended": "La géolocalisation fonctionne, mais vous n'utilisez pas un des fournisseurs recommandés.",
         "GeoIPNoServerVars": "Piwik ne parvient à trouver aucune variable GeoIP %s.",
         "GeoIPPeclCustomDirNotSet": "L'option %s du PHP ini n'est pas définie.",
@@ -336,7 +336,7 @@
         "HowToSetupGeoIP_Step1": "%1$sTélécharger%2$s la base de données GeoLite City depuis %3$sMaxMind%4$s.",
         "HowToSetupGeoIP_Step2": "Extrayez ce fichier et copiez le résultat %1$s dans le %2$ssous-répertoire misc%3$s de Piwik (vous pouvez effectuer cela par FTP ou SSH).",
         "HowToSetupGeoIP_Step3": "Recharger cet affichage. Le fournisseur %1$sGeoIP (PHP)%2$s va maintenant être %3$sInstallé%4$s. Sélectionnez le.",
-        "HowToSetupGeoIP_Step4": "Vous avez terminé! Vous venez juste de configurer Piwik pour utiliser GeoIP ce qui veut dire que vous allez être capable de voir de quelles régions et villes sont vos visiteurs avec une information sur le pays très précise.",
+        "HowToSetupGeoIP_Step4": "Vous avez terminé ! Vous venez juste de configurer Piwik pour utiliser GeoIP ce qui veut dire que vous allez être capable de voir de quelles régions et villes sont vos visiteurs avec une information sur le pays très précise.",
         "HowToSetupGeoIPIntro": "Il ne semble pas que vous ayez une configuration de géolocalisation très précise. C'est une fonctionnalité utile et sans elle vous ne verrez pas de manière précise et complète les informations de localisation de vos visiteurs. Voici comment vous pouvez rapidement commencer à l'utiliser :",
         "HttpServerModule": "Module du serveur HTTP",
         "InvalidGeoIPUpdatePeriod": "Période invalide pour la mise à jour de GeoIP: %1$s. Les valeurs valides sont %2$s.",
@@ -357,7 +357,7 @@
         "PeclGeoLiteError": "Votre base de données GeoIP dans %1$s est nommée %2$s. Malheureusement, le module PECL ne la reconnaitra pas avec ce nom. Veuillez la renommer %3$s.",
         "PiwikNotManagingGeoIPDBs": "Piwik ne gère actuellement aucune base de données GeoIP.",
         "PluginDescription": "Effectue des rapports sur les pays des visiteurs.",
-        "Region": "Region",
+        "Region": "Région",
         "SetupAutomaticUpdatesOfGeoIP": "Configurer les mises à jour automatiques des bases de données GeoIP",
         "SubmenuLocations": "Provenances géographiques",
         "TestIPLocatorFailed": "Piwik a essayé de vérifier la localisation d'une adresse IP connue (%1$s), mais le serveur a renvoyé %2$s. Si ce fournisseur était configuré correctement il aurait renvoyé %3$s.",
