--- a/plugins/UserSettings/lang/fr.json
+++ b/plugins/UserSettings/lang/fr.json
@@ -6,7 +6,7 @@
         "BrowserWithNoPluginsEnabled": "%1$s avec aucun plugin activé",
         "BrowserWithPluginsEnabled": "%1$s avec les plugins %2$s activés",
         "ColumnBrowser": "Navigateur",
-        "ColumnBrowserFamily": "Famille de navigateur",
+        "ColumnBrowserFamily": "Famille de navigateurs",
         "ColumnBrowserVersion": "Version du navigateur",
         "ColumnConfiguration": "Configuration",
         "ColumnOperatingSystem": "Système d'exploitation",
@@ -200,10 +200,10 @@
         "Language_zu": "Zoulou",
         "LanguageCode": "Code langue",
         "MobileVsDesktop": "Mobile vs Fixe",
-        "OperatingSystemFamily": "Famille de systèmes d'exploitation",
+        "OperatingSystemFamily": "Famille de systèmes d'exploitations",
         "OperatingSystems": "Système d'exploitation",
         "PluginDescription": "Effectue des rapports variés sur les paramètres utilisateurs: navigateur, famille du navigateur, système d'exploitation, plugins, résolution, paramètres généraux.",
-        "PluginDetectionDoesNotWorkInIE": "Note : La détection des plugins ne fonctionne pas avec Internet Explorer. Ce rapport est basé sur les navigateurs non-IE.",
+        "PluginDetectionDoesNotWorkInIE": "Note : La détection des plugins ne fonctionne pas avec Internet Explorer. Ce rapport est basé sur les autres navigateurs.",
         "Resolutions": "Résolutions",
         "VisitorSettings": "Paramètres visiteur",
         "WideScreen": "Largeur d'écran",
