--- a/plugins/Actions/lang/fr.json
+++ b/plugins/Actions/lang/fr.json
@@ -10,15 +10,15 @@
         "ColumnExitPageTitle": "Titre de la page de sortie",
         "ColumnExitPageURL": "URL de la page de sortie",
         "ColumnNoResultKeyword": "Mots-clés sans résultats de recherche",
-        "ColumnPageName": "Nom de la page",
+        "ColumnPageName": "Titre de la page",
         "ColumnPagesPerSearch": "Pages des résultats de la recherche",
-        "ColumnPagesPerSearchDocumentation": "Les visiteurs vont effectuer des recherches sur votre site web et parfois cliquer sur \"suivant\" pour afficher plus de résultats. Ceci est le nombre moyen de pages de résultats de recherche vues pour ce mot-clef.",
+        "ColumnPagesPerSearchDocumentation": "Les visiteurs vont effectuer des recherches sur votre site web et parfois cliquer sur \"suivant\" pour afficher plus de résultats. Ceci est le nombre moyen de pages de résultats vues pour ce mot-clé.",
         "ColumnPageURL": "URL de la page",
         "ColumnSearchCategory": "Catégorie de recherche",
         "ColumnSearches": "Recherches",
         "ColumnSearchesDocumentation": "Le nombre de visites pour lesquelles une recherche pour ce mot-clé a été effectuée avec le moteur de recherche de votre site web",
         "ColumnSearchExits": "% Taux de rebond après recherche",
-        "ColumnSearchExitsDocumentation": "Le taux de visites après lesquelles les utilisateurs on quitté le site après avoir effectué une recherche pour ce mot clef avec le moteur de recherche de votre site.",
+        "ColumnSearchExitsDocumentation": "Le pourcentage de visites où les utilisateurs on quitté le site après avoir effectué une recherche pour ce mot-clé avec le moteur de recherche de votre site.",
         "ColumnSearchResultsCount": "Nombre de résultats de la recherche",
         "ColumnSiteSearchKeywords": "Mot-clés uniques",
         "ColumnUniqueClicks": "Clics uniques",
@@ -44,9 +44,9 @@
         "SiteSearchCategories2": "Par exemple, les sites d'e-commerce ont généralement une sélection de la catégorie afin que les visiteurs puissent affiner leurs recherches aux produits d'une catégories définie.",
         "SiteSearchFollowingPagesDoc": "Quand les visiteurs recherchent sur votre site web, ils sont à la recherche d'une page, d'un produit, d'un contenu ou service en particulier. Ce rapport liste les pages qui ont été le plus cliquées après une recherche interne. En d'autres termes, la liste des pages les plus recherchées par des visiteurs déjà sur votre site.",
         "SiteSearchIntro": "Effectuer un suivi des recherches que les visiteurs font sur votre site web est une manière très efficace d'en apprendre plus sur ce que votre audience recherche, cela peut aider à trouver des idées pour du nouveau contenu, un nouveau produit e-commerce dont des clients potentiels pourraient être à la recherche, et de manière générale pour améliorer l'expérience utilisateurs de votre site web.",
-        "SiteSearchKeyword": "Mot clef (recherche du site)",
-        "SiteSearchKeywordsDocumentation": "Ce rapport est une liste des mots clefs de recherche que les visiteurs ont entré dans votre moteur de recherche interne.",
-        "SiteSearchKeywordsNoResultDocumentation": "Ce rapport liste les mots clefs de recherche qui n'ont retourné aucun résultat de recherche: peut-être est-il possible d'améliorer l'algorithme, ou peut être que vos visiteurs cherchent du contenu qui n'est pas (encore) sur votre site web?",
+        "SiteSearchKeyword": "Mot-clé (recherche du site)",
+        "SiteSearchKeywordsDocumentation": "Ce rapport liste les mots-clés recherchés dans votre moteur de recherche interne.",
+        "SiteSearchKeywordsNoResultDocumentation": "Ce rapport liste les mots-clés de recherche qui n'ont retourné aucun résultat: peut-être est-il possible d'améliorer l'algorithme de recherche, ou peut-être que vos visiteurs cherchent du contenu qui n'est pas (encore) sur votre site web ?",
         "SubmenuPagesEntry": "Pages d'entrée",
         "SubmenuPagesExit": "Pages de sortie",
         "SubmenuPageTitles": "Titres des pages",
@@ -59,7 +59,7 @@
         "WidgetPageTitlesFollowingSearch": "Titre des pages après une recherche",
         "WidgetPageUrlsFollowingSearch": "Pages après une recherche",
         "WidgetSearchCategories": "Catégories de recherche",
-        "WidgetSearchKeywords": "Mot clés de recherche sur le site",
-        "WidgetSearchNoResultKeywords": "Mots-clés sans résultat"
+        "WidgetSearchKeywords": "Mot-clés recherchés sur le site",
+        "WidgetSearchNoResultKeywords": "Mots-clés sans résultats"
     }
 }
