--- a/plugins/CoreAdminHome/lang/fr.json
+++ b/plugins/CoreAdminHome/lang/fr.json
@@ -3,47 +3,47 @@
         "Administration": "Administration",
         "ArchivingSettings": "Paramètres d'archivage",
         "BrandingSettings": "Paramètres de l'image de marque",
-        "CheckReleaseGetVersion": "Quand vous vérifiez la présence d'une nouvelle version de Piwik, obtenez toujours",
+        "CheckReleaseGetVersion": "Lors de la vérification des nouvelles versions de Piwik, télécharger la",
         "ClickHereToOptIn": "Cliquez ici pour inclure votre ordinateur.",
         "ClickHereToOptOut": "Cliquez ici pour exclure votre ordinateur.",
-        "CustomLogoFeedbackInfo": "Si vous personnalisez le logo Piwi, vous pouvez être aussi intéressé de cacher le lien %s du menu du haut. Pour ce faire, vous pouvez désactiver le plugin de Feedback dans la page de %sGestionnaire de Plugins%s",
-        "CustomLogoHelpText": "Vous pouvez personnaliser le logo Piwik qui sera affichée dans l'interface utilisateur et les rapports par courriel.",
-        "DevelopmentProcess": "Bien que notre %sprocessus de développement%s inclue des milliers de tests automatisés, les béta testeurs jouent un rôle clef dans la réalisation de la \"politique zéro bug\" de Piwik.",
+        "CustomLogoFeedbackInfo": "Si vous personnalisez le logo Piwi, vous pouvez être aussi vouloir cacher le lien %s du menu du haut. Pour ce faire, vous pouvez désactiver le plugin de Feedback dans la page de %sGestionnaire de Plugins%s.",
+        "CustomLogoHelpText": "Vous pouvez personnaliser le logo Piwik qui sera affiché dans l'interface utilisateur et les rapports par courriel.",
+        "DevelopmentProcess": "Bien que notre %sprocessus de développement%s inclue des milliers de tests automatisés, les béta testeurs jouent un rôle clef dans la réalisation de la \"politique zéro bugs\" de Piwik.",
         "EmailServerSettings": "Paramètres du serveur mail",
         "FaviconUpload": "Sélectionnez un favicon à télécharger",
         "FileUploadDisabled": "Le téléversement de fichiers n'est pas activé dans votre configuration PHP. Pour téléverser un logo personnalisé veuillez définir %s dans php.ini et redémarrer votre serveur web.",
         "ForBetaTestersOnly": "Pour les bêta testeurs uniquement",
-        "ImageTracking": "Suivi par Image",
+        "ImageTracking": "Suivi par image",
         "ImageTrackingIntro1": "Quand un visiteur désactive JavaScript, ou quand JavaScript ne peut être utilisé, vous pouvez utiliser le lien de suivi par image pour suivre les visiteurs.",
-        "ImageTrackingIntro2": "Générez le lien ci-dessous et copiez-collez le HTML généré dans la page. Si vous utilisez cela comme méthode de secours au suivi JavaScript, vous pouvez l'insérer entre des tags %1$s.",
+        "ImageTrackingIntro2": "Générez le lien ci-dessous et copiez-collez le code HTML généré dans vos pages web. Si vous utilisez cela comme méthode de secours au suivi JavaScript, vous pouvez l'insérer entre des tags %1$s.",
         "ImageTrackingIntro3": "Pour la liste complète des options que vous pouvez utiliser avec un lien de suivi par image, consultez la %1$sDocumentation de l'API de suivi%2$s.",
-        "ImageTrackingLink": "Lien de suivi par Image",
-        "ImportingServerLogs": "Importation des logs du server",
-        "ImportingServerLogsDesc": "Un alternative au suivi des visiteurs via leur navigateur (par JavaScript ou par Image) est d'importer de manière continue les logs du serveur. Apprenez-en plus à propos des %1$sstatistiques via les logs serveur%2$s.",
-        "InvalidPluginsWarning": "Les plugins suivants ne sont pas compatibles avec %1$s et ne peuvent pas être chargés: %2$s.",
+        "ImageTrackingLink": "Lien de suivi par image",
+        "ImportingServerLogs": "Importation des logs du serveur",
+        "ImportingServerLogsDesc": "Un alternative au suivi des visiteurs via leur navigateur (par JavaScript ou par image) est d'importer de manière continue les logs du serveur. Apprenez-en plus à propos des %1$sstatistiques via les logs serveur%2$s.",
+        "InvalidPluginsWarning": "Les plugins suivants ne sont pas compatibles avec %1$s et ne peuvent pas être chargés : %2$s.",
         "InvalidPluginsYouCanUninstall": "Vous pouvez mettre à jour ou désinstaller ces plugins sur la page %1$sManagePlugins%2$s.",
         "JavaScriptTracking": "Suivi par JavaScript",
-        "JSTracking_CampaignKwdParam": "Paramètre de la campagne de mot clef",
+        "JSTracking_CampaignKwdParam": "Paramètre de la campagne de mot-clé",
         "JSTracking_CampaignNameParam": "Paramètre nom de la campagne",
         "JSTracking_CodeNote": "Assurez-vous que ce code est sur toutes les pages de votre site web avant la balise %1$s.",
-        "JSTracking_CustomCampaignQueryParam": "Utilisez des paramètres de requête personnalisés pour le nom et le mot clef de la campagne",
-        "JSTracking_CustomCampaignQueryParamDesc": "Note: %1$sPiwik détectera automatiquement les paramètres de Google Analytics.%2$s",
+        "JSTracking_CustomCampaignQueryParam": "Utilisez des paramètres de requête personnalisés pour le nom et le mot-clé de la campagne",
+        "JSTracking_CustomCampaignQueryParamDesc": "Note : %1$sPiwik détectera automatiquement les paramètres de Google Analytics.%2$s",
         "JSTracking_EnableDoNotTrack": "Activer la détection côté client de \"ne pas suivre\"",
-        "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Note: Le support de la détection côté serveur de \"ne pas suivre\" est activé, cette option n'aura donc aucun effet.",
+        "JSTracking_EnableDoNotTrack_AlreadyEnabled": "Note : Le support de la détection côté serveur de \"ne pas suivre\" est activé, cette option n'aura donc aucun effet.",
         "JSTracking_EnableDoNotTrackDesc": "Donc les requêtes de suivi ne seront pas envoyées si les visiteurs ne souhaitent pas être suivis.",
         "JSTracking_GroupPageTitlesByDomain": "Préfixer le domaine du site au titre de la page lors du suivi",
-        "JSTracking_GroupPageTitlesByDomainDesc1": "Donc si quelqu'un visite la page \"à propos de\" sur le site \"blog\". %1$s ce sera enregistré en tant que \"blog \/ à propos de\". C'est la manière la plus facile d'avoir un aperçu de votre trafic par sous-domaine.",
+        "JSTracking_GroupPageTitlesByDomainDesc1": "Si un internaute visite la page \"À propos\" sur blog.%1$s, la visite sera enregistrée en tant que \"blog \/ À propos\". C'est la manière la plus facile d'avoir un aperçu du trafic par sous-domaine.",
         "JSTracking_MergeAliases": "Dans le rapport des liens sortants, cacher les clics vers des alias d'adresses connues telles que",
         "JSTracking_MergeAliasesDesc": "Ainsi un clic sur les adresses d'alias (ex %s) ne sera pas compté comme un lien sortant.",
         "JSTracking_MergeSubdomains": "Suivre les visiteurs sur tous les sous-domaines de",
         "JSTracking_MergeSubdomainsDesc": "Ainsi si un visiteur visite %1$s et %2$s, cela sera comptabilisé comme une visite unique.",
         "JSTracking_PageCustomVars": "Suivre une variable personnalisée pour chaque affichage de page",
-        "JSTracking_PageCustomVarsDesc": "Par exemple, avec une variable nommée \"categorie\" et une valeur de \"livre blancs\".",
+        "JSTracking_PageCustomVarsDesc": "Par exemple, avec une variable nommée \"categorie\" et la valeur \"livre blancs\".",
         "JSTracking_VisitorCustomVars": "Effectuer le suivi des variables personnalisées pour ce visiteur",
-        "JSTracking_VisitorCustomVarsDesc": "Par exemple, avec la variable nommée \"type\" et la valeur \"client\".",
+        "JSTracking_VisitorCustomVarsDesc": "Par exemple, avec une variable nommée \"type\" et la valeur \"client\".",
         "JSTrackingIntro1": "Vous pouvez suivre les visiteurs de votre site web de manières variées. La manière recommandée est celle via JavaScript. Pour utiliser cette méthode assurez vous simplement que chaque page web du site a un certain code JavaScript que vous pouvez générer ici.",
-        "JSTrackingIntro2": "une fois que vous avez le code de suivi JavaScript pour votre site web, copiez-collez le sur toutes les pages dont vous voulez effectuer le suivi avec Piwik.",
-        "JSTrackingIntro3": "Dans la plupart des sites web, blogs, CMS, etc. Vous pouvez utiliser un module additionnel préconçu pour effectuer le travail technique à votre place. (Consultez la %1$s liste des modules utilisés pour intégrer Piwik%2$s.) Si aucun module n'existe vous pouvez modifier les modèles de pages de votre site web et ajouter ce code dans le fichier de pied de page.",
+        "JSTrackingIntro2": "Une fois que vous avez le code de suivi JavaScript pour votre site web, copiez-collez le sur toutes les pages dont vous voulez effectuer le suivi avec Piwik.",
+        "JSTrackingIntro3": "Dans la plupart des sites web, blogs, CMS, etc, vous pouvez utiliser un module additionnel préconçu pour effectuer le travail technique à votre place. (Consultez la %1$s liste des modules utilisés pour intégrer Piwik%2$s.) Si aucun module n'existe vous pouvez modifier les modèles de pages de votre site web et ajouter ce code dans le fichier de pied de page.",
         "JSTrackingIntro4": "Si vous ne souhaitez pas utiliser JavaScript pour effectuer le suivi des visiteurs, %1$sgénérez un lien de suivi par image ci-dessous%2$s.",
         "JSTrackingIntro5": "Si vous voulez faire plus qu'effectuer le suivi des visites de pages, veuillez consulter %1$sla documentation de suivi par JavaScript%2$s pour connaitre la liste des fonctions disponibles. En utilisant ces fonctions vous pouvez effectuer le suivi des objectifs, variables personnalisées, commandes de e-commerce, chariots\/paniers abandonnés et plus encore.",
         "LatestBetaRelease": "Dernière version beta",
@@ -56,9 +56,9 @@
         "MenuGeneralSettings": "Paramètres généraux",
         "MenuManage": "Gérer",
         "OptOutComplete": "Cookie d'exclusion installé. Vos visites sur ce site web ne seront PAS enregistrées par notre outil d'analyse web.",
-        "OptOutCompleteBis": "Note - Si vous nettoyez vos cookies et supprimez le cookie d'exclusion, ou bien si vous changez d'ordinateur et\/ou de navigateur, il vous faudra de nouveau activer la procédure d'exclusion.",
+        "OptOutCompleteBis": "Note: si vous nettoyez vos cookies et supprimez le cookie d'exclusion, ou bien si vous changez d'ordinateur et\/ou de navigateur, il vous faudra de nouveau effectuer la procédure d'exclusion.",
         "OptOutExplanation": "Piwik met un point d'honneur à respecter la vie privée sur Internet. Pour fournir à vos visiteurs le choix de ne pas apparaître dans les analyses de Piwik, vous pouvez ajouter le code HTML suivant sur une des pages de votre site web, par exemple dans la page \"Politique de confidentialité\".",
-        "OptOutExplanationBis": "Ce code va afficher un Iframe contenant un lien pour vos visiteurs pour ne pas être suivi dans Piwik en installant un cookie de neutralisation dans leur navigateur. %s Cliquez ici %s pour visualiser le contenu qui sera affiché par l'iFrame.",
+        "OptOutExplanationBis": "Ce code va afficher un iFrame contenant un lien permettant à vos visiteurs de ne pas être suivi par Piwik en installant un cookie de neutralisation dans leur navigateur. %s Cliquez ici %s pour visualiser le contenu qui sera affiché par l'iFrame.",
         "OptOutForYourVisitors": "Exclusion de Piwik pour vos visiteurs",
         "PiwikIsInstalledAt": "Piwik est installé à l'adresse",
         "PluginDescription": "Zone d'administration de Piwik.",
