--- a/plugins/CoreHome/lang/fr.json
+++ b/plugins/CoreHome/lang/fr.json
@@ -16,7 +16,7 @@
         "ExcludeRowsWithLowPopulation": "Toutes les lignes sont affichées %s Exclure celles peu signifiantes",
         "ExternalHelp": "Aide (nouvel onglet)",
         "FlattenDataTable": "Le rapport est hiérarchique %s L'aplatir",
-        "HowMuchIsPiwikWorth": "Combien vaut Piwik pour vous?",
+        "HowMuchIsPiwikWorth": "Combien vaut Piwik pour vous ?",
         "IncludeRowsWithLowPopulation": "Les lignes peu signifiantes sont cachées %s Afficher toutes les lignes",
         "InjectedHostEmailBody": "Bonjour, j'ai essayé d'accéder à Piwik aujourd'hui et j'ai rencontré l'avertissement de nom d'hôte inconnu.",
         "InjectedHostEmailSubject": "On a accédé à Piwik avec un nom d'hôte inconnu : %s",
@@ -29,7 +29,7 @@
         "MakeADifference": "Faites une différence : %1$sDonnez Maintenant%2$s pour financer Piwik 2.0!",
         "MakeOneTimeDonation": "Faire un don unique à la place.",
         "NoPrivilegesAskPiwikAdmin": "Vous êtes connecté en tant que '%s' mais il semble que nous n'ayez aucune permission définie dans Piwik. %s Demandez à votre administrateur (cliquez pour envoyer un e-mail)%s de vous donner l'accès 'Consultation' à un site web.",
-        "OnlyForSuperUserAccess": "Ce Gadget est uniquement affiché aux utilisateurs possédant un accès de type super utilisateur.",
+        "OnlyForSuperUserAccess": "Ce widget est uniquement affiché aux utilisateurs possédant un accès de type super utilisateur.",
         "PageOf": "%1$s de %2$s",
         "PeriodDay": "Jour",
         "PeriodDays": "jours",
@@ -43,7 +43,7 @@
         "PluginDescription": "Structure des rapports statistiques web.",
         "ReportGeneratedOn": "Rapport généré le %s",
         "ReportGeneratedXAgo": "Rapport généré il y a %s",
-        "SharePiwikLong": "Salut! Je viens juste de trouver un bon logiciel libre: Piwik!\nPiwik va te permettre de suivre els visiteurs de ton site web gratuitement. Tu devrais vraiment aller voir!",
+        "SharePiwikLong": "Salut ! Je viens juste de trouver un bon logiciel libre : Piwik !\nPiwik va te permettre de suivre les visiteurs de ton site web gratuitement. Tu devrais vraiment aller voir !",
         "SharePiwikShort": "Piwik! Analyse web gratuite et libre. Maîtrisez vos données.",
         "ShareThis": "Partager ceci",
         "ShortDateFormat": "%shortDay% %day% %shortMonth%",
@@ -54,7 +54,7 @@
         "SubscribeAndBecomePiwikSupporter": "Procéder à un paiement par carte de crédit sécurisé (Paypal) pour devenir un bienfaiteur de Piwik!",
         "SupportPiwik": "Supporter Piwik!",
         "TableNoData": "Aucune donnée pour cette table.",
-        "ThereIsNoDataForThisReport": "Il n'y a pas de donnée pour ce rapport.",
+        "ThereIsNoDataForThisReport": "Il n'y a pas de données pour ce rapport.",
         "UnFlattenDataTable": "Le rapport est plat %s Le rendre hiérarchique",
         "ViewAllPiwikVideoTutorials": "Visualiser tous les tutoriaux vidéo de Piwik",
         "WebAnalyticsReports": "Rapports des statistiques web.",
