--- a/plugins/DevicesDetection/lang/fr.json
+++ b/plugins/DevicesDetection/lang/fr.json
@@ -1,6 +1,8 @@
 {
     "DevicesDetection": {
+        "BrowserEngine": "Moteur de rendu HTML",
         "BrowserEngineDocumentation": "Ce tableau affiche les navigateurs de vos visiteurs regroupés par famille. %s L'information la plus importante pour les développeurs est quel type de moteur de rendu utilisent leurs visiteurs. Les labels contiennent les noms des moteurs suivis par les principaux navigateurs les utilisant entre parenthèses.",
+        "BrowserEngines": "Moteurs de rendu HTML",
         "BrowserVersions": "Versions du navigateur",
         "Camera": "Caméra",
         "CarBrowser": "Navigateur de voiture",
@@ -17,7 +19,7 @@
         "DevicesDetection": "Périphériques du visiteur",
         "DeviceType": "Type du périphérique",
         "FeaturePhone": "Fonctionnalité téléphone",
-        "OperatingSystemFamilies": "Familles de système d'exploitation",
+        "OperatingSystemFamilies": "Familles de systèmes d'exploitations",
         "OperatingSystemVersions": "Versions de système d'exploitation",
         "PluginDescription": "Ce composant additionnel fournit des informations détaillées à propos des périphériques mobiles, telles que la marque (constructeur), le modèle (version du périphérique), une meilleure détection du type de périphérique (tv, consoles, smart phones, pc, etc) et autres. Ce composant additionnel ajoute un nouveau rapport dans Visiteur > Périphériques.",
         "SmartDisplay": "Affichage intelligent",
