--- a/plugins/Login/lang/cs.json
+++ b/plugins/Login/lang/cs.json
@@ -11,6 +11,7 @@
         "LoginOrEmail": "Uživatelské jméno nebo E-mail",
         "LoginPasswordNotCorrect": "Uživatelské jméno & heslo nejsou správné",
         "LostYourPassword": "Zapomněli jste vaše heslo?",
+        "MailPasswordChangeBody": "Ahoj %1$s,\n\nZ %2$s byl zaslán požadavek o změnu hesla. Pro potvrzení nových přihlašovacích údajů navštivte následující odkaz:\n\n%3$s\n\nPoznámka: Tento token je platný 24 hodin.\n\nA díky za používání Piwiku!",
         "MailTopicPasswordChange": "Potvrďte změnu hesla",
         "PasswordChanged": "Vaše heslo bylo změněno.",
         "PasswordRepeat": "Heslo (pro kontrolu)",
