--- a/plugins/PrivacyManager/lang/fr.json
+++ b/plugins/PrivacyManager/lang/fr.json
@@ -1,6 +1,7 @@
 {
     "PrivacyManager": {
         "AnonymizeIpDescription": "Sélectionnez \"Oui\" si vous voulez que Piwik ne trace pas les adresses IP complètes.",
+        "AnonymizeIpExtendedHelp": "Quand les utilisateurs visitent votre site, Piwik n'utilisera pas l'adresse IP complète (par exemple %s) mais l'anonymisera (par exemple %s). L'anonymisation des adresses IP est requise par certaines lois adressant la protection de la vie privée dans certains pays comme l'Allemagne.",
         "AnonymizeIpInlineHelp": "Masque les adresses IP des visiteurs pour remplir les conditions légales et politiques locales.",
         "AnonymizeIpMaskLengtDescription": "Sélectionnez combien de bytes de l'adresse IP du visiteur doivent être masqués.",
         "AnonymizeIpMaskLength": "%s byte(s) - ex %s",
@@ -32,8 +33,8 @@
         "DoNotTrack_DisabledMoreInfo": "Nous vous recommandons de respecter la vie privée de vos visiteurs et d'activer la prise en charge de \"Ne pas Suivre\"",
         "DoNotTrack_Enable": "Activer la prise en charge de \"Ne pas Suivre\"",
         "DoNotTrack_Enabled": "Vous respectez actuellement actuellement la vie privée de vos utilisateurs, Bravo!",
-        "DoNotTrack_EnabledMoreInfo": "Quand les utilisateurs ont définit au sein de leurs navigateurs \"Je ne veux plus être suivi\" (DoNoTrack est activé) Piwik ne suit plus leurs visites.",
-        "DoNotTrack_SupportDNTPreference": "Prendre en charge la préférence \"Ne pas Suivre\"",
+        "DoNotTrack_EnabledMoreInfo": "Quand les utilisateurs ont activé dans leurs navigateurs \"Je ne veux pas être suivi\" (Do No Track en anglais) Piwik ne suit plus leurs visites.",
+        "DoNotTrack_SupportDNTPreference": "Prendre en charge la préférence \"Ne Pas Suivre\"",
         "EstimatedDBSizeAfterPurge": "Taille estimée de la base de données après la purge",
         "EstimatedSpaceSaved": "Espace libéré estimé",
         "GeolocationAnonymizeIpNote": "Note : La géolocalisation aura à peu près les mêmes résultats avec 1 octet rendu anonyme. Avec 2 octets ou plus, elle sera inexacte.",
@@ -53,8 +54,8 @@
         "RecommendedForPrivacy": "(recommandé pour le respect de la vie privée)",
         "ReportsDataSavedEstimate": "Taille de la base de données",
         "SaveSettingsBeforePurge": "Vous avez modifié les paramètres de suppression des données. Veuillez les sauvegarder avant de démmarrer une purge.",
-        "SeeAlsoOurOfficialGuidePrivacy": "Consultez aussi notre guide officiel: %sConfidentialité de l'analyse web%s",
-        "Teaser": "Sur cette page, vous pouvez personnaliser Piwik pour que sa gestion de la vie privée respecte la législation en vigueur, en : %s rendant anonyme l'adresse IP du visiteur%s, %s supprime automatiquement les anciens logs de visiteurs de la base de données%s, et %s fournit un mécanisme d'exclusion pour votre site web%s.",
+        "SeeAlsoOurOfficialGuidePrivacy": "Consultez aussi notre guide officiel : %sConfidentialité de l'analyse web%s",
+        "Teaser": "Sur cette page, vous pouvez personnaliser Piwik pour que sa gestion de la vie privée respecte la législation en vigueur, en : %s rendant anonyme l'adresse IP du visiteur%s, %s supprimant automatiquement les anciens logs de visiteurs de la base de données%s, et %s en fournissant un mécanisme d'exclusion pour votre site web%s.",
         "TeaserHeadline": "Paramètres de vie privée",
         "UseAnonymizedIpForVisitEnrichment": "Utiliser les adresses IP anonymisées pour enrichir les visites",
         "UseAnonymizedIpForVisitEnrichmentNote": "Les composants tels que Geo Location (localisation) par IP et Fournisseur améliorent les métadonnées des visiteurs. Par défaut ces composants utilisent des adresses IP anonymisées. Si vous sélectionnez \"Non\", l'adresse IP réelle et complète sera utilisée à la place. Ceci améliorera la précision des données mais diminuera le respect de la vie privée.",
