--- a/plugins/SegmentEditor/lang/fr.json
+++ b/plugins/SegmentEditor/lang/fr.json
@@ -1,6 +1,7 @@
 {
     "SegmentEditor": {
         "AddANDorORCondition": "Ajouter la condition %s",
+        "AddingSegmentForAllWebsitesDisabled": "Ajouter des segments pour tous les sites a été désactivé.",
         "AddNewSegment": "Ajouter un nouveau segment",
         "AreYouSureDeleteSegment": "Êtes vous sûr(e) de vouloir supprimer ce segment?",
         "AutoArchivePreProcessed": "les rapports segmentés sont pré-traités (plus rapide, requiert un cron sur archive.php)",
