--- a/plugins/SitesManager/lang/fr.json
+++ b/plugins/SitesManager/lang/fr.json
@@ -50,11 +50,11 @@
         "PiwikOffersEcommerceAnalytics": "Piwik permet un suivi et un rapport avancé des statistiques E-commerce. Apprenez-en plus à propos %s des statistiques E-commerce%s.",
         "PiwikWillAutomaticallyExcludeCommonSessionParameters": "Piwik exclura automatiquement les paramètres de session communs (%s).",
         "PluginDescription": "Gestion des sites web dans Piwik: Ajoute un nouveau site web, modifie un existant, affiche le code JavaScript à inclure dans vos pages. Toutes les actions sont disponibles au travers de l'API.",
-        "SearchCategoryDesc": "Piwik peut aussi effectuer le suivi de la catégorie de recherche pour chaque mot clef de recherche interne.",
-        "SearchCategoryLabel": "Paramètres de categoriees",
+        "SearchCategoryDesc": "Piwik peut aussi effectuer le suivi de la catégorie de recherche pour chaque mot-clé de recherche interne.",
+        "SearchCategoryLabel": "Paramètres de catégories",
         "SearchCategoryParametersDesc": "Vous pouvez entrer une liste de paramètres de requête servant à spécifier la catégorie de recherche séparés par des virgules.",
         "SearchKeywordLabel": "Paramètres de requêtes",
-        "SearchKeywordParametersDesc": "Entrez une liste séparée par des virgules de tous les noms de paramètres de requête de recherche contenant les mots clefs.",
+        "SearchKeywordParametersDesc": "Entrez une liste séparée par des virgules de tous les paramètres de requête contenant des mots-clés de recherche.",
         "SearchParametersNote": "Note : les paramètres de requête et de catégorie seront utilisés uniquement pour les sites web qui ont la recherche activée et ces paramètres laissés vides.",
         "SearchParametersNote2": "Pour désactiver la recherche sur les nouveaux sites web, laissez ces deux champs vides.",
         "SearchUseDefault": "Utiliser les paramètres de recherche par %sdéfaut%s",
@@ -66,10 +66,10 @@
         "SiteSearchUse": "Vous pouvez utiliser Piwik pour suivre et effectuer un rapport sur ce que vos visiteurs cherchent sur le moteur de recherche interne de votre site web.",
         "SuperUserAccessCan": "Un utilisateur avec un accès super utilisateur peut aussi %sconfigurer les paramètres globaux%s pour les nouveaux sites web.",
         "Timezone": "Fuseau horaire",
-        "TrackingSiteSearch": "Suivi de la recherche interne du site",
+        "TrackingSiteSearch": "Suivi de la recherche interne sur le site",
         "TrackingTags": "Tags de suivi pour %s",
         "Urls": "URLs",
-        "UTCTimeIs": "l'heure UTC est %s.",
+        "UTCTimeIs": "L'heure UTC est %s.",
         "WebsitesManagement": "Gestion des sites",
         "YouCurrentlyHaveAccessToNWebsites": "Vous avez actuellement accès à %s sites web.",
         "YourCurrentIpAddressIs": "Votre adresse IP actuelle est %s"
