--- a/plugins/UserCountryMap/lang/fr.json
+++ b/plugins/UserCountryMap/lang/fr.json
@@ -19,7 +19,7 @@
         "SecondsAgo": "%s secondes",
         "ShowingVisits": "Visites géo-localisées des derniers",
         "Unlocated": "<b>%s<\/b> %p des dernières visites de %c n'ont pas pu être géo-localisées.",
-        "VisitorMap": "Carte du visiteur",
+        "VisitorMap": "Carte des visiteurs",
         "WithUnknownCity": "%s avec une ville inconnue",
         "WithUnknownRegion": "%s avec une région inconnue",
         "WorldWide": "Mondialement"
