--- a/plugins/VisitFrequency/lang/de.json
+++ b/plugins/VisitFrequency/lang/de.json
@@ -7,6 +7,7 @@
         "ColumnBounceRateForReturningVisits": "Absprungsrate bei wiederkehrenden Besuchen",
         "ColumnMaxActionsInReturningVisit": "Maximale Aktionen eines wiederkehrenden Besuchs",
         "ColumnNbReturningVisitsConverted": "Anzahl wiederkehrende Besuche mit Konversion",
+        "ColumnReturningUsers": "Wiederkehrende Benutzer",
         "ColumnReturningVisits": "Wiederkehrende Besuche",
         "ColumnSumVisitLengthReturning": "Gesamte Aufenthaltszeit bei wiederkehrenden Besuchen (in Sekunden)",
         "ColumnUniqueReturningVisitors": "Eindeutige wiederkehrende Besucher",
