--- a/plugins/VisitFrequency/lang/el.json
+++ b/plugins/VisitFrequency/lang/el.json
@@ -7,6 +7,7 @@
         "ColumnBounceRateForReturningVisits": "Βαθμός Απομάκρυνσης για Επιστρεφόμενες Επισκέψεις",
         "ColumnMaxActionsInReturningVisit": "Μέγιστος αριθμός Δραστηριοτήτων σε μια επιστρεφόμενη επίσκεψη",
         "ColumnNbReturningVisitsConverted": "Αριθμός μετατρεπόμενων επιστρεφόμενων επισκέψεων",
+        "ColumnReturningUsers": "Επιστρέφοντες Χρήστες",
         "ColumnReturningVisits": "Επιστρεφόμενες επισκέψεις",
         "ColumnSumVisitLengthReturning": "Συνολικός δαπανηθής χρόνος από επιστρεφόμενους επισκέπτες (σε δευτερόλεπτα)",
         "ColumnUniqueReturningVisitors": "Μοναδικοί επιστρεφόμενοι επισκέπτες",
