--- a/plugins/VisitFrequency/lang/it.json
+++ b/plugins/VisitFrequency/lang/it.json
@@ -7,6 +7,7 @@
         "ColumnBounceRateForReturningVisits": "Percentuale dei rimbalzi per le visite ricorrenti",
         "ColumnMaxActionsInReturningVisit": "Numero massimo di azioni in una visita di ritorno",
         "ColumnNbReturningVisitsConverted": "Numero di visite di ritorno convertite",
+        "ColumnReturningUsers": "Utenti di ritorno",
         "ColumnReturningVisits": "Visite ricorrenti",
         "ColumnSumVisitLengthReturning": "Tempo complessivo speso dai visitatori di ritorno (in secondi)",
         "ColumnUniqueReturningVisitors": "Visitatori unici di ritorno",
