--- a/plugins/VisitorInterest/lang/fr.json
+++ b/plugins/VisitorInterest/lang/fr.json
@@ -12,7 +12,7 @@
         "PlusXMin": "%s min",
         "VisitNum": "Numéro de la visite",
         "VisitsByDaysSinceLast": "Visites par jours depuis la dernière visite",
-        "visitsByVisitCount": "Visites par numéro de visite",
+        "visitsByVisitCount": "Visites par nombre de visites",
         "VisitsPerDuration": "Visites par durée de la visite",
         "VisitsPerNbOfPages": "Visites par nombre de pages",
         "WidgetLengths": "Durée des visites",
@@ -20,7 +20,7 @@
         "WidgetPages": "Pages par visite",
         "WidgetPagesDocumentation": "Dans ce rapport, vous pouvez voir combien de visites impliquaient l'affichage d'un certain nombre de pages. Initialement ce rapport est affiché comme un nuage de tags, les nombres de pages les plus fréquents sont affichés dans des polices plus grandes.",
         "WidgetVisitsByDaysSinceLast": "Visites par jour depuis la dernière visite",
-        "WidgetVisitsByDaysSinceLastDocumentation": "Dans ce rapport, vous pouvez voir le nombre de visites il y a eu de ce visiteur dont la dernière visite date depuis un certain nombre de jours.",
-        "WidgetVisitsByNumDocumentation": "Dans ce rapport, vous pouvez voir le nombre de visites qui était la nième visite, par exemple: visiteurs qui ont visité votre site web au moins n fois."
+        "WidgetVisitsByDaysSinceLastDocumentation": "Dans ce rapport, vous pouvez voir le nombre de visites par visiteur dont la dernière visite date de X jours.",
+        "WidgetVisitsByNumDocumentation": "Dans ce rapport, vous pouvez voir la répartition par nombre de visites. Par exemple quel proportion de visiteurs ont visité votre site au moins n fois."
     }
 }
