--- a/lang/sl.json
+++ b/lang/sl.json
@@ -223,6 +223,7 @@
         "NoDataForGraph": "Nobenih podatkov za ta graf.",
         "NoDataForTagCloud": "Ni podatkov za oblaček z etiketami",
         "NotDefined": "%s ni definiran",
+        "Note": "Opomba",
         "NotRecommended": "(ni priporočljivo)",
         "NotValid": "%s ni veljaven",
         "NSeconds": "%s sekund",
