--- a/plugins/Contents/lang/fr.json
+++ b/plugins/Contents/lang/fr.json
@@ -1,5 +1,12 @@
 {
     "Contents": {
-        "Contents": "Contenus"
+        "ContentName": "Nom du contenu",
+        "ContentPiece": "Partie du contenu",
+        "Contents": "Contenus",
+        "ContentTarget": "Cible du contenu",
+        "Impressions": "Impressions",
+        "Interaction": "Interaction",
+        "InteractionRate": "Taux d'interaction",
+        "Interactions": "Interactions"
     }
 }
