--- a/plugins/CoreHome/lang/fr.json
+++ b/plugins/CoreHome/lang/fr.json
@@ -3,6 +3,7 @@
         "CategoryNoData": "Aucune donnée pour cette catégorie. Essayez \"d'inclure toute la population\".",
         "CheckForUpdates": "Vérifier les mises à jour",
         "CheckPiwikOut": "Vérifiez sur Piwik!",
+        "ClickRowToExpandOrContract": "Cliquez sur cette rangée pour afficher ou masquer le sous-tableau",
         "CloseWidgetDirections": "Vous pouvez fermer ce gadget en cliquant sur l'icône en forme de \"X\" en haut du gadget.",
         "DataForThisReportHasBeenPurged": "Les données pour ce rapport ont plus de %s mois et ont été purgées.",
         "DataTableExcludeAggregateRows": "Les lignes agrégées sont affichées %s Les cacher",
