--- a/plugins/Installation/lang/zh-cn.json
+++ b/plugins/Installation/lang/zh-cn.json
@@ -33,6 +33,7 @@
         "NfsFilesystemWarningSuffixAdmin": "这意味着 Piwik 使用基于文件的会话将会非常慢。",
         "NfsFilesystemWarningSuffixInstall": "在NFS上使用基于文件的会话会非常慢，所以 Piwik 将使用数据库会话。如果您有很多并发的面板用户，需要在增大客户端连接到服务器的最大数。",
         "NoConfigFound": "无法找到 Piwik 配置文件，而您正尝试存取一个 Piwik 的页面！<br \/><b>  » 您可以 <a href='index.php'>立刻安装 Piwik<\/a><\/b><br \/><small>假如您在之前已安装过 Piwik，并且已有些数据表在您的数据库中，不用担心，您可以重复使用此相同的数据表并保留您现存的数据！<\/small>",
+        "NotSupported": "不支持",
         "Optional": "选项",
         "Password": "密码",
         "PasswordDoNotMatch": "密码不匹配",
