--- a/plugins/Provider/lang/sl.json
+++ b/plugins/Provider/lang/sl.json
@@ -1,6 +1,7 @@
 {
     "Provider": {
         "ColumnProvider": "Ponudnik",
+        "ProviderReportFooter": "Neznan ponudnik pomeni, da IP številke ni bilo mogoče povezati s ponudnikom.",
         "SubmenuLocationsProvider": "Lokacije & Ponudnik",
         "WidgetProviders": "Ponudniki"
     }
