--- a/plugins/VisitFrequency/lang/fr.json
+++ b/plugins/VisitFrequency/lang/fr.json
@@ -7,6 +7,7 @@
         "ColumnBounceRateForReturningVisits": "Pourcentage de rebond pour les visites retour",
         "ColumnMaxActionsInReturningVisit": "Actions maximum dans une visite de retour",
         "ColumnNbReturningVisitsConverted": "Nombre de visites converties de retour",
+        "ColumnReturningUsers": "Visiteurs connus",
         "ColumnReturningVisits": "Visites retour",
         "ColumnSumVisitLengthReturning": "Le temps total passé par les visiteurs de retour (en secondes)",
         "ColumnUniqueReturningVisitors": "Visiteurs uniques de retour",
