language update  refs #3430

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -128,7 +128,7 @@
         "DisplayTableWithMoreMetrics": "Afficher un tableau avec plus d'unités",
         "Documentation": "Documentation",
         "Donate": "Donner",
-        "Done": "Fait",
+        "Done": "Effectué",
         "Download": "Télécharger",
         "DownloadFail_FileExists": "Le fichier %s existe déjà!",
         "DownloadFail_FileExistsContinue": "Téléchargement partiel en cours pour %s, mais un téléchargement terminé existe déjà!",
