--- a/plugins/CorePluginsAdmin/lang/de.json
+++ b/plugins/CorePluginsAdmin/lang/de.json
@@ -47,6 +47,7 @@
         "MarketplaceSellPluginSubject": "Marketplace - Plugin verkaufen",
         "MenuPlatform": "Plattform",
         "MissingRequirementsNotice": "Bitte aktualisieren Sie %1$s %2$s auf eine neuere Version, %1$s %3$s wird benötigt.",
+        "MissingRequirementsPleaseInstallNotice": "Bitte installiere %1$s %2$s da es von %3$s benötigt wird.",
         "NoPluginsFound": "Keine Plugins gefunden",
         "NotAllowedToBrowseMarketplacePlugins": "Sie können die Liste der installierbaren Plugins durchforsten, um sie für Ihre Plattform anzupassen oder zu erweitern. Bitte kontaktieren Sie Ihren Administrator, wenn Sie eines dieser Plugins installiert haben möchten.",
         "NotAllowedToBrowseMarketplaceThemes": "Sie können die Liste der installierbaren Themes durchforsten, um das Erscheinungsbild Ihrer Plattform anzupassen. Bitte kontaktieren Sie Ihren Administrator wenn Sie eines dieser Themes installiert haben möchten.",
